# pipeline_components

./: .gitignore  .gitmodules  Makefile  README.md  generate_linmos_config.py  generate_sofia_params.py  pyproject.toml  setup.cfg  tests.py
cadc-vos/: Dockerfile  README.md  copy.sh  requirements.txt
casda_download/: Dockerfile  README.md  RELEASES.md  casda_download.py  docker-compose.yml  download.py  evaluation_files.py  requirements.txt  utils.py
diagnostic_plot/: Dockerfile  plot_frequency_distribution.py  requirements.txt
download/: Dockerfile  casda_download.py  requirements.txt  verify_checksum.py
dss_image/: Dockerfile  get_dss_image.py  requirements.txt
hpx_tiles/: Dockerfile  POSSUM_2156-54.csv  README.md  RELEASES.md  casa_tiling.py  docker-compose.yml  fits_md5.py  fits_split.py  generate_tile_pixel_map.py  get_tile_pixel_map.py  hpx_tile_config.json  join_subcubes.py  map.config.json  rename_tiles.py  requirements.txt  split_cube.py  tile.config.json  tile_components.py
metadata/: Dockerfile  README.md  add_mosaic_sbids_to_header.py  add_sbid_to_ser_mosaic_header.py  add_to_fits_header.py  append_mosaic_metadata_to_header.py  docker-compose.yml  download_evaluation_files.py  fits_history.py  get_file_in_compressed_folder.py  get_footprint_file.py  get_footprint_files.py  get_slurm_output.py  repair_incomplete_tiles.py  requirements.txt  slurm_output.py
milkyway/: Dockerfile  generate_milkyway_plots.py  milkyway_validation.py  requirements.txt
mom0/: Dockerfile  requirements.txt  run_wallmerge.py  wallmerge.py
mosaicking/: Dockerfile  (+3 more)
(+42 files in other folders)
