[project]
name = "aussrc-tools"
version = "0.1.0"
description = "AusSRC data processing pipeline common Python utils"
authors = [
    {name = "Austin Shen", email = "austin.shen@csiro.au"},
]
readme = "README.md"
requires-python = ">= 3.8"

dependencies = [
    "astropy"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py310"]
